--- a/hm/hmstyle.css
+++ b/hm/hmstyle.css
@@ -12,6 +12,10 @@ p {
     margin: 0;
 }
 
+i {
+    margin-right: 5px;
+}
+
 .filledtext {
     margin-bottom: 20px;
 }
@@ -54,6 +58,22 @@ p {
     border: 1px solid lightgrey;
     border-radius: 3px;
     margin: 30px 0;
+    overflow: hidden;
+}
+
+.container-ca {
+    padding: 20px;
+    border: 1px solid lightgrey;
+    border-radius: 3px;
+    margin: 30px 0;
+    overflow: hidden;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.button-ca {
+    color:white !important;
+    background: #FF5F00;
+    border-radius: 0;
 }
 
 input[type=text] {
