update whole foods css

--- a/assets/css/wf.css
+++ b/assets/css/wf.css
@@ -316,6 +316,7 @@ a {
         }
         .checkout img {
             width: 50%;
+            height: auto;
             margin-bottom: 20px;
         }
         .nutrition {
