--- a/wm/wmstyle.css
+++ b/wm/wmstyle.css
@@ -22,6 +22,7 @@ h2 {
     line-height: 40px;
     font-family: 'helvetica', sans-serif;
 }
+
 h3 {
     margin: 0px;
     font-size: 1.2rem;
@@ -29,7 +30,18 @@ h3 {
     font-family: 'helvetica', sans-serif;
 }
 
-.confirmline{
+#draw-canvas {
+    position: relative;
+}
+
+#draw-canvas img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-150px, -90px);
+}
+
+.confirmline {
     /* color: #2553a9; */
     border: solid 3px;
 }
@@ -51,36 +63,39 @@ i {
     margin-bottom: 20px;
 }
 
-.wrapper.style1 > .inner.medium {
+.wrapper.style1>.inner.medium {
     width: 65rem;
 }
 
 .row {
-    display: -ms-flexbox; /* IE10 */
+    display: -ms-flexbox;
+    /* IE10 */
     display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
+    -ms-flex-wrap: wrap;
+    /* IE10 */
     flex-wrap: wrap;
     margin: 0 -16px;
 }
 
 .col-25 {
-    -ms-flex: 30%; /* IE10 */
+    -ms-flex: 30%;
+    /* IE10 */
     flex: 30%;
 }
 
 .col-50 {
-    -ms-flex: 50%; /* IE10 */
+    -ms-flex: 50%;
+    /* IE10 */
     flex: 50%;
 }
 
 .col-75 {
-    -ms-flex: 70%; /* IE10 */
+    -ms-flex: 70%;
+    /* IE10 */
     flex: 70%;
 }
 
-.col-25,
-.col-50,
-.col-75 {
+.col-25, .col-50, .col-75 {
     padding: 0 16px;
 }
 
@@ -92,9 +107,9 @@ i {
     overflow: hidden;
 }
 
-.summary{
+.summary {
     background: #fff;
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,.16);
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .16);
     border: 1px solid #e6e7e8;
     border-radius: 8px;
     font-family: 'helvetica', sans-serif;
@@ -106,18 +121,17 @@ i {
     border-radius: 3px;
     margin: 30px 0;
     overflow: hidden;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .button-ca {
-    color:white !important;
+    color: white !important;
     background: #FF5F00;
     border-radius: 0;
 }
 
 #checkout-button {
     color: #fff !important;
-
     margin-top: 50px;
     font-weight: 400;
     font-size: 12px;
@@ -136,10 +150,9 @@ i {
 
 input [type="submit"] {
     color: #fff !important;
-
 }
 
-.checkout-button a{
+.checkout-button a {
     color: #fff !important;
 }
 
@@ -167,16 +180,18 @@ label {
     padding: 7px 0;
     font-size: 24px;
 }
+
 /* step up styles */
-.step-up-container{
+
+.step-up-container {
     position: fixed;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
-height: 100%;
-z-index: 10000000000000;
+    height: 100%;
+    z-index: 10000000000000;
 }
 
-.step-up-window{
+.step-up-window {
     text-align: center;
     position: fixed;
     width: 800px;
@@ -184,129 +199,223 @@ z-index: 10000000000000;
     background-color: white;
     border: 1px solid #dadada;
     left: 50%;
-    top:50%;
-margin-left: -400px; /* Half of the width */
-margin-top: -300px; /* Half of the width */
-padding: 30px;
-    
+    top: 50%;
+    margin-left: -400px;
+    /* Half of the width */
+    margin-top: -300px;
+    /* Half of the width */
+    padding: 30px;
 }
-.topnav div{
+
+.topnav div {
     padding-left: 50px;
 }
 
-.step-up-window-email{
+.step-up-window-email {
     text-align: center;
     position: fixed;
     width: 600px;
-    height: 300px;
+    /* height: 300px; */
     background-color: white;
     border: 1px solid #dadada;
     left: 50%;
-    top:50%;
-margin-left: -300px; /* Half of the width */
-margin-top: -150px; /* Half of the width */
-padding: 30px;
-    
+    top: 50%;
+    margin-left: -300px;
+    /* Half of the width */
+    margin-top: -150px;
+    /* Half of the width */
+    padding: 30px;
 }
 
-canvas{
+.dialog{
+    display: inline-block;
+position: relative;
+}
+
+.donut canvas {
     margin-top: 50px;
+    background-image: url("/wm/img/donuts.png");
+}
+
+canvas {
+    margin-top: 50px;
+    background: rgb(238, 238, 238);
 }
 
 .swipe-pattern-img {
     text-align: center;
     width: 350px;
     margin: auto;
-    margin-top:50px;
+    margin-top: 50px;
 }
 
-.step-up-window h2{
-font-size: 22px;
-font-weight: 900;
-margin-bottom: 5px;
+.countainer-swipe {
+    position: relative;
 }
 
-.step-up-window-email h2{
+#confirmation-gif {
+    position: absolute;
+    width: 550px;
+    left: 50%;
+    top: 50%;
+    z-index: 100;
+    transform: translate(-275px, -206.25px);
+}
+
+.show {
+    visibility: visible;
+}
+
+.step-up-window h2 {
     font-size: 22px;
     font-weight: 900;
     margin-bottom: 5px;
+}
+
+.step-up-window-email h2 {
+    font-size: 22px;
+    line-height: 22px;
+    font-weight: 900;
+    margin-bottom: 5px;
     margin-bottom: 30px;
-    }
-.step-up-window h3{
+}
+
+.step-up-window h3 {
     font-size: 18px;
     font-weight: 400;
-    }
+}
 
-.swipe-pattern-img img{
+.swipe-pattern-img img {
     width: 350px;
     margin: auto;
 }
 
-.topnav{
+.topnav {
     background: #041e42;
     padding: 10px;
 }
 
-.container img{
+.container img {
     display: inline;
     width: 40px;
 }
 
-.block{
-    align-items:center;
+.block {
+    align-items: center;
     display: flex;
     margin-bottom: 20px;
 }
-.container h3{
+
+.container h3 {
     display: inline;
     line-height: 51px;
     margin-left: 20px;
 }
 
-.topnav img{
+.topnav img {
     width: 20px;
     display: inline;
-   
 }
-.topnav h5{
+
+.topnav h5 {
     font-size: 20px;
     margin-left: 10px;
     display: inline;
-    color:white;
+    color: white;
 }
 
-.total{
+#form {
+    max-width: 240px;
+    margin: 25px auto 0;
+    margin-bottom: 20px;
+}
+
+#form input {
+    margin: 0 5px;
+    text-align: center;
+    line-height: 80px;
+    font-size: 20px;
+    border: solid 1px #ccc;
+    box-shadow: 0 0 5px #ccc inset;
+    outline: none;
+    width: 15%;
+    transition: all .2s ease-in-out;
+    border-radius: 3px;
     display: inline;
 }
-.camera{
+.email-check{
+    width: 300px !important;
+    transform: translate(-150px,-123.5px)!important;
+}
+
+#form input:focus {
+    border-color: orange;
+    box-shadow: 0 0 5px orange inset;
+}
+
+#form input::selection {
+    background: transparent;
+}
+
+.total {
+    display: inline;
+}
+
+.camera {
     width: 300px !important;
 }
-.camerades{
+
+.camerades {
     width: 300px !important;
     margin-left: 20px;
 }
+
 @media (max-width: 320px) {
-    .camera{
+    .step-up-window-email {
+        text-align: center;
+        position: fixed;
+        width: 300px;
+        left: 50%;
+        top: 50%;
+        margin-left: -150px;
+        /* Half of the width */
+        margin-top: -150px;
+        /* Half of the width */
+        padding: 30px;
+    }
+    .camera {
         width: 240px !important;
     }
-    .camerades{
+    .camerades {
         width: 240px !important;
         margin-left: 0px;
     }
 }
+
 @media (max-width: 800px) {
-    .camerades{
+    .step-up-window-email {
+        text-align: center;
+        position: fixed;
+        width: 300px;
+        left: 50%;
+        top: 50%;
+        margin-left: -150px;
+        /* Half of the width */
+        margin-top: -160px;
+        /* Half of the width */
+        padding: 30px;
+    }
+    .camerades {
         margin-left: 0px;
     }
-    .total{
+    .total {
         display: block;
         margin-top: 20px;
     }
-
-    .wrapper{
+    .wrapper {
         margin-top: 30px;
     }
-    .step-up-window{
+    .step-up-window {
         text-align: center;
         position: fixed;
         width: 400px;
@@ -314,10 +423,12 @@ margin-bottom: 5px;
         background-color: white;
         border: 1px solid #dadada;
         left: 50%;
-        top:50%;
-    margin-left: -200px; /* Half of the width */
-    margin-top: -325px; /* Half of the width */
-    padding: 30px;  
+        top: 50%;
+        margin-left: -200px;
+        /* Half of the width */
+        margin-top: -325px;
+        /* Half of the width */
+        padding: 30px;
     }
     .row {
         flex-direction: column-reverse;
