--- a/hm/hmstyle.css
+++ b/hm/hmstyle.css
@@ -39,18 +39,18 @@ i {
 }
 
 .col-25 {
-    -ms-flex: 30%; /* IE10 */
-    flex: 30%;
+    -ms-flex: 1; /* IE10 */
+    flex: 1;
 }
 
 .col-50 {
-    -ms-flex: 50%; /* IE10 */
-    flex: 50%;
+    -ms-flex: 1; /* IE10 */
+    flex: 1;
 }
 
 .col-75 {
-    -ms-flex: 70%; /* IE10 */
-    flex: 70%;
+    -ms-flex: 2; /* IE10 */
+    flex: 2;
 }
 
 .col-25,
@@ -107,13 +107,81 @@ label {
     padding: 7px 0;
     font-size: 24px;
 }
+
+/* learn more popup style*/
+
+.show {
+    visibility: visible !important;
+    /*-webkit-animation: fadeIn 0.5s;
+    animation: fadeIn 0.5s;
+    right: 20px;
+    top:20px;
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    background: white;
+    border: 1px solid #dadada;
+    z-index: 10;*/
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
+.pop-learn{
+    /*visibility: hidden;*/
+    right: 20%;
+    top:10%;
+    position: absolute;
+    width: 60%;
+    height: auto;
+    background: white;
+    /*border: 1px solid #dadada;*/
+    z-index: 10;
+}
+
+.pop-learn .exp {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.pop-learn .exp img {
+    /*flex: 1;*/
+    margin-right: 1em;
+    width: 34px;
+}
+
+.pop-learn .exp p {
+    /*flex: 3;*/
+}
+
+#mypop-learn{
+    visibility: hidden;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10000000000000;
+}
+
+
 /* step up styles */
 .step-up-container{
     position: fixed;
     background-color: rgba(0,0,0,0.7);
     width: 100%;
-height: 100%;
-z-index: 10000000000000;
+    height: 100%;
+    z-index: 10000000000000;
 }
 
 .step-up-window{
@@ -125,9 +193,9 @@ z-index: 10000000000000;
     border: 1px solid #dadada;
     left: 50%;
     top:50%;
-margin-left: -400px; /* Half of the width */
-margin-top: -300px; /* Half of the width */
-padding: 30px;
+    margin-left: -400px; /* Half of the width */
+    margin-top: -300px; /* Half of the width */
+    padding: 30px;
 
 }
 
@@ -140,9 +208,9 @@ padding: 30px;
     border: 1px solid #dadada;
     left: 50%;
     top:50%;
-margin-left: -300px; /* Half of the width */
-margin-top: -150px; /* Half of the width */
-padding: 30px;
+    margin-left: -300px; /* Half of the width */
+    margin-top: -150px; /* Half of the width */
+    padding: 30px;
 
 }
 
@@ -158,9 +226,9 @@ canvas{
 }
 
 .step-up-window h2{
-font-size: 22px;
-font-weight: 900;
-margin-bottom: 5px;
+    font-size: 22px;
+    font-weight: 900;
+    margin-bottom: 5px;
 }
 
 .step-up-window-email h2{
@@ -168,11 +236,11 @@ margin-bottom: 5px;
     font-weight: 900;
     margin-bottom: 5px;
     margin-bottom: 30px;
-    }
+}
 .step-up-window h3{
     font-size: 18px;
     font-weight: 400;
-    }
+}
 
 .swipe-pattern-img img{
     width: 350px;
@@ -189,9 +257,9 @@ margin-bottom: 5px;
         border: 1px solid #dadada;
         left: 50%;
         top:50%;
-    margin-left: -200px; /* Half of the width */
-    margin-top: -325px; /* Half of the width */
-    padding: 30px;
+        margin-left: -200px; /* Half of the width */
+        margin-top: -325px; /* Half of the width */
+        padding: 30px;
     }
     .row {
         flex-direction: column-reverse;
