--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8465,10 +8465,18 @@
     display: block;
   }
   .protothumb{width: 90%;}
-
+  .centerheader p{
+	font-weight: 400;
+	font-size: 16px !important;
+}
 }
 
 @media screen and (max-width: 600px) {
+	.indeximg{
+		text-align: center;
+		width: 90%;
+	}
+
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -8659,7 +8667,57 @@ content: "\2014 \2009";
 .protobutton {margin-left: 0;}
 .protothumb{max-width: 500px; padding-bottom: 20px;}
 .backbutton{margin-bottom: 40px;margin-left:0px;} 
+.indeximg{
+	text-align: center;
+	max-width: 500px;
+}
+.indeximg-med{
+	text-align: center;
+	max-width: 700px;
+}
+.imgbox{
+	width: 100%;
+	text-align: center;
+}
 
+.centerheader h1, h2, h3, h5, h6 {
+    text-align: center;
+}
+
+.centerheader p{
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 34px;
+}
+
+.centerheader h3 {
+	margin-top:100px;
+    color: #F79F1A;
+	text-align: center;
+	font-weight: 900;
+	font-size: 54px;
+	background: rgba(214, 213, 213, 0.548);
+}
+.icon-stakeholder{
+	margin: 50px 0px 10px 0px;
+	text-align: center;
+
+}
+.icon-stakeholder-img{
+	max-width: 100px;
+	vertical-align: middle;
+}
+.centerheader h4{
+	font-weight: 900;
+	font-size: 30px;
+	margin-left: 16px;
+}
+.why{width:60%;
+margin:auto}
+
+.hi{
+	margin-top:150px;
+}
 /**
  * Swiper 3.4.0
  * Most modern mobile touch slider and framework with hardware accelerated transitions
